--- a/bower.json
+++ b/bower.json
@@ -2,14 +2,15 @@
   "lib": {
     "name": "bower-rails generated lib assets",
     "dependencies": {
-      "angular": "v1.2.25",
+      "angular": "latest",
       "angular-bootstrap": "latest",
       "angular-ui-router": "latest",
-      "angular-animate": "1.2.6",
-      "bootstrap-sass-official": "latest",
-      "restangular": "latest"
-    }
+      "angular-animate": "latest",
+      "bootstrap-sass-official": "latest"
+    },
+    "resolutions":{ "angular": "1.3.0-rc.3" }
   },
+
   "vendor": {
     "name": "bower-rails generated vendor assets",
     "dependencies": {
